Env-var passing successful, enhanced logic in ERB templates.

--- a/src/main/resources/cartridge/env/OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST.erb
+++ b/src/main/resources/cartridge/env/OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST.erb
@@ -1,1 +1,1 @@
-<%= if ENV['OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST'] then puts "${wmq.connectionNameList}" else ENV['OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST'] end %>
+<%= if (not ENV['OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST'] or ENV['OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST'].empty?) then puts "${wmq.connectionNameList}" else ENV['OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST'] end %>
