--- a/src/main/resources/cartridge/env/OPENSHIFT_JBOSSWMQ_CHANNEL.erb
+++ b/src/main/resources/cartridge/env/OPENSHIFT_JBOSSWMQ_CHANNEL.erb
@@ -1,1 +1,1 @@
-<%= if ENV['OPENSHIFT_JBOSSWMQ_CHANNEL'] then puts "${wmq.channel}" else ENV['OPENSHIFT_JBOSSWMQ_CHANNEL'] end %>
+<%= if (not ENV['OPENSHIFT_JBOSSWMQ_CHANNEL'] or ENV['OPENSHIFT_JBOSSWMQ_CHANNEL'].empty?) then puts "${wmq.channel}" else ENV['OPENSHIFT_JBOSSWMQ_CHANNEL'] end %>
