--- a/src/main/resources/cartridge/env/OPENSHIFT_JBOSSWMQ_JNDINAME.erb
+++ b/src/main/resources/cartridge/env/OPENSHIFT_JBOSSWMQ_JNDINAME.erb
@@ -1,1 +1,1 @@
-<%= if (not ENV['OPENSHIFT_JBOSSWMQ_JNDINAME'] or ENV['OPENSHIFT_JBOSSWMQ_JNDINAME'].empty?) then puts "${wmq.jndiName}" else ENV['OPENSHIFT_JBOSSWMQ_JNDINAME'] end %>
+<%= if (not ENV['OPENSHIFT_JBOSSWMQ_JNDINAME'] or ENV['OPENSHIFT_JBOSSWMQ_JNDINAME'].empty?) then "${wmq.jndiName}" else ENV['OPENSHIFT_JBOSSWMQ_JNDINAME'] end %>
