Updated for OSE 2.1.

--- a/src/main/resources/cartridge/env/OPENSHIFT_JBOSSWMQ_CHANNEL.erb
+++ b/src/main/resources/cartridge/env/OPENSHIFT_JBOSSWMQ_CHANNEL.erb
@@ -1,1 +1,1 @@
-<%= if (not ENV['OPENSHIFT_JBOSSWMQ_CHANNEL'] or ENV['OPENSHIFT_JBOSSWMQ_CHANNEL'].empty?) then "${wmq.channel}" else ENV['OPENSHIFT_JBOSSWMQ_CHANNEL'] end %>
+<%= if (not ENV['OPENSHIFT_JBOSSWMQ_CHANNEL'] or ENV['OPENSHIFT_JBOSSWMQ_CHANNEL'].empty?) then ENV['OPENSHIFT_JBOSSWMQ_CHANNEL'] = "${wmq.channel}" end ; ENV['OPENSHIFT_JBOSSWMQ_CHANNEL'] %>
