--- a/src/main/resources/cartridge/env/OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST.erb
+++ b/src/main/resources/cartridge/env/OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST.erb
@@ -1,1 +1,1 @@
-<%= if (not ENV['OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST'] or ENV['OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST'].empty?) then "${wmq.connectionNameList}" else ENV['OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST'] end %>
+<%= if (not ENV['OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST'] or ENV['OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST'].empty?) then ENV['OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST'] = "${wmq.connectionNameList}" end ; ENV['OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST'] %>
