--- a/src/main/resources/cartridge/env/OPENSHIFT_JBOSSWMQ_QUEUEMANAGER.erb
+++ b/src/main/resources/cartridge/env/OPENSHIFT_JBOSSWMQ_QUEUEMANAGER.erb
@@ -1,1 +1,1 @@
-<%= if (not ENV['OPENSHIFT_JBOSSWMQ_QUEUEMANAGER'] or ENV['OPENSHIFT_JBOSSWMQ_QUEUEMANAGER'].empty?) then "${wmq.queueManager}" else ENV['OPENSHIFT_JBOSSWMQ_QUEUEMANAGER'] end %>
+<%= if (not ENV['OPENSHIFT_JBOSSWMQ_QUEUEMANAGER'] or ENV['OPENSHIFT_JBOSSWMQ_QUEUEMANAGER'].empty?) then ENV['OPENSHIFT_JBOSSWMQ_QUEUEMANAGER'] = "${wmq.queueManager}" end ; ENV['OPENSHIFT_JBOSSWMQ_QUEUEMANAGER'] %>
